# HallucinationsInCodeAnalysis

./: .env.example  .gitattributes  .gitignore  Modelfile  README.md  create_chatdev_traces.py  create_chatdev_traces_with_ollama.ps1  create_chatdev_traces_with_ollama.sh  detect_qwen.py  detect_qwen_with_ollama.ps1  detect_qwen_with_ollama.sh  full_workflow_create_detect.ps1  full_workflow_create_detect.sh  pyproject.toml
WareHouse/: qwen_summary.json
WareHouse/sdk_ChatDev_v1_20260430101135_20260430101135/: execution_logs.json  node_outputs.yaml  qwen_results.jsonl  token_usage_sdk_ChatDev_v1_20260430101135.json  workflow_summary.yaml
WareHouse/sdk_ChatDev_v1_20260430101408_20260430101408/: execution_logs.json  node_outputs.yaml  qwen_results.jsonl  token_usage_sdk_ChatDev_v1_20260430101408.json  workflow_summary.yaml
WareHouse/sdk_ChatDev_v1_20260430101613_20260430101613/: execution_logs.json  node_outputs.yaml  qwen_results.jsonl  token_usage_sdk_ChatDev_v1_20260430101613.json  workflow_summary.yaml
WareHouse/sdk_ChatDev_v1_20260430101850_20260430101850/: execution_logs.json  (+4 more)
data/: programdev_dataset.json
operations/: __init__.py  globals.py  graphs.py  latency.py  metrics_extraction.py  propagation.py  traces.py  visualization.py
results/: logs_df.csv  metricas_grafos.csv  warehouse_runs.csv
scripts/: create_chatdev_traces.py  create_chatdev_traces_with_ollama.ps1  create_chatdev_traces_with_ollama.sh  detect_qwen.py  detect_qwen_with_ollama.ps1  detect_qwen_with_ollama.sh  full_workflow_create_detect.ps1  full_workflow_create_detect.sh
(+2480 files in other folders)
