[project]
name = "tfm"
version = "0.1.0"
description = "Análisis de la propagación de alucinaciones en sistemas multiagente mediante minería de trazas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chatdev",
    "kagglehub",
    "notebook",
    "ipykernel",
    "tqdm",
    "ipywidgets",
    "pandarallel",
    "pandas",
    "matplotlib",
    "seaborn",
    "networkx",
    "scikit-learn",
    "pyarrow",
    "huggingface_hub",
    "python-dotenv",
    "networkx"
]

[tool.uv.workspace]
members = [
    "DS-1000",
]
